--- a/style.css
+++ b/style.css
@@ -9,23 +9,27 @@ nav {
 	overflow: hidden;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
+	height: 4em;
 }
 
 nav a.nav-links {
-	flex-direction: row;
 	color: white;
-	text-align: center;
 	padding: 1em;
+	padding-top: 1.25em;
 	text-decoration: none;
 	font-size: 1em;
 }
 
 #nav-link-container {
 	display: flex;
+	height: 4em;
 }
 
 nav a.social-links {
 	float: right;
+	height: 4em;
+	padding-top: 1em;
 }
 
 nav a:hover {
@@ -200,6 +204,106 @@ footer {
 .description {
 	text-align: center;
 	margin: 0.5vw;
+}
+
+#background {
+	width: 100%;
+	height: 100%;
+}
+
+#hero h1 {
+	font-size: 5em;
+	margin-bottom: 0;
+	margin-top: 0;
+	margin-right: 1em;
+}
+
+#hero h2 {
+	font-size: 1.5em;
+	margin-bottom: 0;
+}
+
+#hero {
+	display: flex;	
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	top: 20%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+
+#hero-body {
+	display: flex;
+	flex-direction: column;
+}
+
+#hero a {
+	background-color: cornflowerblue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.7em;
+}
+
+iframe {
+	position: absolute;
+	top: 70%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	border-radius: 12px;
+}	
+ 
+input[type=text] {
+  width: 100%; 	
+  padding: 12px; 
+  border: 1px solid rgb(169, 157, 238); 
+  border-radius: 12px;
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px; 
+}
+
+textarea {
+  width: 100%; 	
+  padding: 12px; 
+  border: 1px solid rgb(169, 157, 238); 
+  border-radius: 12px;
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px; 
+}
+
+input[type=submit] {
+  background-color: cornflowerblue;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #4f72a0;
+}
+
+.contact-form {
+	position: absolute;
+	top: 55%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+  border-radius: 12px;
+  background-color: #f2f2f2;
+  padding: 20px;
+	width: 80vw;
 }
 
 @media screen and (max-width: 600px) {
